<?xml version="1.0"?>
<package format="2">
  <name>muto_core</name>
  <version>0.0.0</version>
  <description>The muto_core package</description>

 
  <maintainer email="muto-dev@eclipse.org">Muto</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rosunit</build_depend>
  <test_depend>coverage</test_depend>


  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <export>
  </export>
</package>
